--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -75,6 +75,7 @@
 		}
 	}
 }
+/*END HEADER*/
 //menu
 .navbar-header {
       float: none;
@@ -246,10 +247,68 @@
 	}
 }
 /*END MENU*/
+/*FOOTER
+********************************************/
+.site-footer{
+	#block-menu-menu-footer-menu{
+		display: block;
+		li{
+			margin-bottom: 10px;
+			a{
+				color: @color-white;
+				padding: 0px; 
+				padding-left: 10px;
+				padding-right: 10px;
+				border-left: 2px solid;
+				border-radius: 0px;
+			}
+		}
+		.first{
+			a{
+				padding-left: 0px; 
+				border-left: none;	
+			}
+			
+		}
+	}
+	#block-menu-block-2{
+		width: 200px;
+    	float: inherit;
+    	
+	}
+	.menu-block-2{
+		float: left;
+		.menu{
+			.introduction-title{
+				display: none;
+			}
+
+			li{
+				display: inline-block;
+				margin-left: 0px;
+				margin-right: 10px;
+			}
+		}
+	}
+}
+/*END FOOTER*/
 
 /*HOME
 ****************************************************************/
+.front{
+	.panels-flexible-region-new-slider{
 
+	}
+	.views-item-columns-container{
+		margin-bottom: 30px;
+	}
+	.more-link{
+		a{
+			margin-top: 0px;
+		}
+	}
+	
+}
 
 
 /*END HOME*/
