--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -409,7 +409,7 @@ a.more-link{
 				.views-field-body{
 					position: absolute;
 					width: 1140px;
-					top: 63%;
+					top: 66%;
 					left: 10%;
 					color: @color-white;
 				}
@@ -523,7 +523,7 @@ a.more-link{
 						}
 					}
 					a.more-link{
-						text-align: left;
+						text-align: right;
 					}
 					a.show-less{
 						text-align: right !important;
@@ -714,6 +714,9 @@ a.more-link{
 		font-weight: bold;
     	font-size: 1.2em;
     	line-height: 1.6em;
+	}
+	.panels-flexible-row{
+		padding-bottom: 0px;
 	}
 	.pane-node-body{
 		ul{
@@ -921,6 +924,23 @@ a.more-link{
 	.accesibility_table{
 		width: 100% !important;
 	}
+	ul{
+		ul{
+			list-style: disc;
+		}
+	}
+}
+.margin-left{
+	list-style: none;
+	ul{
+		list-style: disc;
+	}
+}
+.margin-15px{
+	margin-left: 15px !important;
+	ul{
+		list-style: disc;
+	}
 }
 
 
@@ -985,7 +1005,7 @@ a.more-link{
 				padding-top: 20px;
 				.views-item-columns-container{
 					background-color: @color-primary;
-					min-height: 538px;
+					min-height: 571px;
 					.views-field-field-image{
 						min-height: 202px;//testing
 					}
