--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -59,7 +59,7 @@
 	    		input{
 	    			display: none;
 	    			height: 29px !important;
-	    			width: 80%;
+	    			width: 80% !important;
 	    		}
 	    		button{
 	    			height: 29px;
