--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -38,6 +38,8 @@
 			bottom: 0px;
 			right: 0px;
 			margin-right: 15px;
+			width: inherit;
+    		top: 46px;
 			.introduction-image{
 				img{
 					width: 29px;
@@ -55,6 +57,7 @@
     		input{
     			display: none;
     			height: 29px !important;
+    			width: 127px !important;
     		}
     		button{
     			height: 29px;
