--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -8511,7 +8511,31 @@ a.more-link:before {
 .quicktabs-tabs-container ul.quicktabs-tabs > li:hover ul {
   display: block !important;
 }
+.quicktabs-tabs-container ul.quicktabs-tabs > li .tab-title-show-all:before {
+  content: "";
+  background: url("../images/icons/017.png") no-repeat;
+  background-size: 100%;
+  display: inline-block;
+  width: 22px;
+  height: 21px;
+  vertical-align: middle;
+  margin-right: 10px;
+}
 .quicktabs-tabs-container ul.quicktabs-tabs > li .tab-title-practical_tool:before {
+  content: "";
+  background: url("../images/icons/017.png") no-repeat;
+  background-size: 100%;
+  display: inline-block;
+  width: 22px;
+  height: 21px;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+.quicktabs-tabs-container ul.quicktabs-tabs > li .tab-title-practical_tool:hover:before {
+  content: "";
+  background: url("../images/icons/017.png") no-repeat;
+}
+.quicktabs-tabs-container ul.quicktabs-tabs > li .tab-title-promotional_material:before {
   content: "";
   background: url("../images/icons/017.png") no-repeat;
   background-size: 100%;
@@ -8984,6 +9008,255 @@ a.more-link:before {
   margin-top: 35px;
   margin-bottom: 40px;
 }
+/*END OIRA COMMUNITY*/
+/*SEARCH*/
+#ui-theme-basic-green.ui-menu {
+  top: 29px !important;
+  float: right;
+  min-width: inherit;
+  right: 0px !important;
+  left: inherit !important;
+  width: 100% !important;
+  border-radius: 5px 0px 5px 5px;
+  border: 2px solid #003399;
+}
+#ui-theme-basic-green.ui-menu .ui-autocomplete-field-group {
+  color: #ffffff;
+  background-color: #786586;
+  width: 100%;
+  right: 0px;
+  padding-right: 5px;
+  text-align: right;
+}
+#ui-theme-basic-green.ui-menu .ui-menu-item-first {
+  border-top: none;
+}
+.page-search-site .oira-search-form-container {
+  background: url('../images/background-two-colors.png') repeat-y 50%;
+  padding-bottom: 0px;
+  padding-top: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child .form-group {
+  margin-bottom: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column {
+  background-color: #786586;
+  color: #ffffff;
+  padding-right: 30px;
+  padding-top: 30px;
+  position: relative;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column .form-type-textfield {
+  float: left;
+  margin-bottom: 15px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column .form-type-textfield input {
+  border: none;
+  border-radius: 0px;
+  outline: none;
+  height: auto;
+  padding-right: 35px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column #edit-submit {
+  position: absolute;
+  right: 0;
+  margin-right: 30px;
+  color: #786586;
+  border: none;
+  border-radius: 0px;
+  outline: none;
+  width: 35px;
+  line-height: 19px;
+  font-size: 1.2em;
+  padding-left: 7px;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0);
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column #edit-submit:before {
+  content: "\e003";
+  font-family: "Glyphicons Halflings";
+  margin-right: 30px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column a.active {
+  display: block;
+  color: #ffffff;
+  margin-bottom: 10px;
+  font-style: italic;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column a.active span:before {
+  color: #786586;
+  padding: 1px;
+  font-size: 0.7em;
+  margin-right: 10px;
+  background-color: #ffffff;
+  display: block;
+  width: 13px;
+  height: 13px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column #edit-field-country label:after,
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column #edit-field-languagevalue label:after,
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column #edit-field-sector label:after {
+  content: none;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column .form-type-checkboxes {
+  border-top: 2px solid #ffffff;
+  padding-top: 10px;
+  clear: both;
+  margin-top: 15px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column .form-type-checkboxes input.form-checkbox {
+  display: none;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column .form-type-checkboxes label {
+  padding-left: 0px;
+  margin-bottom: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column .form-type-checkboxes label:first-child {
+  font-family: 'Oswald';
+  font-size: 1.2em;
+  font-weight: normal;
+  display: block;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column .form-type-checkboxes label:first-child:after {
+  content: "\e250";
+  font-family: "Glyphicons Halflings";
+  margin-left: 10px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column .form-type-checkboxes .area-shown:after {
+  content: "\e252" !important;
+  font-family: "Glyphicons Halflings";
+  margin-left: 10px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column .form-item-field-sector {
+  border-bottom: 2px solid #ffffff;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column .form-type-checkboxes:last-child {
+  border-bottom: 2px solid #ffffff;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content {
+  background-color: #dfd8e4;
+  padding-bottom: 50px;
+  padding-left: 30px;
+  padding-top: 30px;
+  border-left: 5px solid #ffffff;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content #edit-sort-fieldset {
+  border: none;
+  border-radius: 0px;
+  background-color: rgba(0, 0, 0, 0);
+  box-shadow: none;
+  border-top: 2px solid #786586;
+  border-bottom: 2px solid #786586;
+  margin-bottom: 30px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content #edit-sort-fieldset .panel-body {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content #edit-sort-fieldset .sort-container {
+  min-width: 210px;
+  padding-left: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content #edit-sort-fieldset .sort-container label {
+  font-weight: 100;
+  font-size: 0.9em;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content #edit-sort-fieldset .sort-container label:after {
+  content: ": ";
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content #edit-sort-fieldset .sort-container #edit-sort {
+  font-size: 0.9em;
+  display: inline-block;
+  width: auto;
+  padding: 0;
+  border: none;
+  padding-bottom: 1px;
+  font-weight: bold;
+  height: initial;
+  background-color: rgba(0, 0, 0, 0);
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content #edit-sort-fieldset .count-container {
+  font-size: 0.9em;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper {
+  background-color: #ffffff;
+  padding: 30px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result {
+  border-top: 2px solid #786586;
+  padding: 30px 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .col-sm-3 {
+  padding-left: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-title-field {
+  font-size: 1.4em;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-title-field h3 {
+  margin-top: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-field-publication-date {
+  margin-top: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-tools-see-more a.more-link {
+  text-align: left;
+  margin-top: 15px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-tools-see-more a.show-less {
+  text-align: right !important;
+  width: 20px;
+  height: 12px;
+  float: right;
+  overflow: hidden;
+  font-style: normal;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-tools-see-more a.show-less:before {
+  content: "\e253";
+  font-family: "Glyphicons Halflings";
+  font-size: 1.2em;
+  line-height: 0;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-field-tool-link a {
+  color: #58585a;
+  font-weight: bold;
+  margin-top: 30px;
+  display: block;
+  margin-bottom: 15px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-field-tool-link a span.glyphicon-new-window {
+  color: #10b2e4;
+  margin-left: 10px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-related-partners .node-partner {
+  background-color: #786586;
+  padding: 15px;
+  color: #ffffff;
+  margin-top: 20px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-related-partners .node-partner h4 a {
+  font-size: 1.2em;
+  color: #ffffff;
+  margin-top: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-related-partners .node-partner .more-link {
+  color: #ffffff;
+  text-align: left;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div {
+  display: table;
+  border-collapse: collapse;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div > .even:first-child,
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div > .odd:first-child {
+  display: table-cell;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div > .even:first-child {
+  border-right: 10px solid white;
+}
 /*FOOTER
 ********************************************/
 .site-footer {
@@ -9113,6 +9386,7 @@ a.more-link:before {
   .top-header .region-header-block #block-search-form button {
     height: 29px;
     width: 29px;
+    float: right;
   }
   .top-header .region-header-block #block-menu-block-3 {
     display: block;
@@ -9391,6 +9665,7 @@ a.more-link:before {
     height: 29px;
     width: 29px;
     margin-right: 10px;
+    float: right;
     background-color: rgba(255, 255, 255, 0) !important;
   }
   .top-header .header-blocks .region-header-block #block-menu-block-3 {
