--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1981,9 +1981,6 @@ a.more-link{
 			}
 		}
 		.tab-title-show-all{
-			
-		}
-		.tab-title-practical_tool{
 			&:before{
 				content: "";
 				background: url("../images/icons/017.png") no-repeat;
@@ -1995,8 +1992,36 @@ a.more-link{
 			    margin-right: 10px;
 			}
 		}
-		.tab-title-promotional_material{
+		.tab-title-practical_tool{
+			&:before{
+				content: "";
+				background: url("../images/icons/017.png") no-repeat;
+				background-size: 100%;
+			    display: inline-block;
+			    width: 22px;
+			    height: 21px;
+			    vertical-align: middle;
+			    margin-right: 10px;
 
+			}
+			&:hover{
+			    	&:before{
+						content: "";
+						background: url("../images/icons/017.png") no-repeat;
+					}
+			    }
+		}
+		.tab-title-promotional_material{
+			&:before{
+				content: "";
+				background: url("../images/icons/017.png") no-repeat;
+				background-size: 100%;
+			    display: inline-block;
+			    width: 22px;
+			    height: 21px;
+			    vertical-align: middle;
+			    margin-right: 10px;
+			}
 		}
 		a{
 			padding: 15px;
@@ -2538,3 +2563,285 @@ a.more-link{
 	}
 }
 /*END OIRA COMMUNITY*/
+
+/*SEARCH*/
+//input search styles
+#ui-theme-basic-green.ui-menu{
+	top: 29px !important;
+	float: right;
+	min-width: inherit;
+	right: 0px !important;
+	left: inherit !important;
+	width: 100% !important;
+	border-radius: 5px 0px 5px 5px;
+    border: 2px solid #003399;
+	.ui-autocomplete-field-group{
+		color: @color-white;
+		background-color: @color-primary-dark;
+		width: 100%;
+	    right: 0px;
+	    padding-right: 5px;
+	    text-align: right;
+	}
+	.ui-menu-item-first {
+    	border-top: none;
+	}
+}
+
+//general search styles
+.page-search-site{
+	.oira-search-form-container{
+		background: url('../images/background-two-colors.png') repeat-y 50%;
+		padding-bottom: 0px;
+		padding-top: 0px;
+		#osha-search-search-form{
+			div:first-child{
+			    .form-group{
+			    	margin-bottom: 0px;
+			    }
+			    #edit-left-column{
+					background-color: @color-primary-dark;
+					color: @color-white;
+					padding-right: 30px;
+					padding-top: 30px;
+					position: relative;
+
+					.form-type-textfield{
+						float: left;
+						margin-bottom: 15px;
+						input{
+							border: none;
+							border-radius: 0px;
+							outline: none;
+							height: auto;
+							padding-right: 35px;
+						}
+					}
+					#edit-submit{
+						position: absolute;
+						right: 0;
+						margin-right: 30px;
+						color: @color-text-purple-darker;
+					    border: none;
+					    border-radius: 0px;
+					    outline: none;
+					    width: 35px;
+					    line-height: 19px;
+    					font-size: 1.2em;
+    					padding-left: 7px;
+    					overflow: hidden;
+    					background-color: rgba(0,0,0,0);
+						&:before{
+							content: "\e003";
+							font-family: "Glyphicons Halflings";
+							margin-right: 30px;
+						}
+					}
+					a.active{
+						display: block;
+						color: @color-white;
+						margin-bottom: 10px;
+						font-style: italic;
+						span{
+							&:before{
+								color: @color-text-purple-darker;
+							    padding: 1px;
+							    font-size: 0.7em;
+							    margin-right: 10px;
+							    background-color: @color-white;
+							    display: block;
+							    width: 13px;
+							    height: 13px;
+							}
+						}
+					}
+					#edit-field-country, #edit-field-languagevalue, #edit-field-sector{
+						label{
+							&:after{
+								content: none;
+							}
+						}
+					}
+					.form-type-checkboxes{
+						border-top: 2px solid @color-white;
+						padding-top: 10px;
+						clear: both;
+						margin-top: 15px;
+						input.form-checkbox{
+							display: none;
+						}
+						label{
+							padding-left: 0px;
+							margin-bottom: 0px;
+						}
+						label:first-child{
+							font-family: @font-family-base-2;
+							font-size: @font-size1-2;
+							font-weight: normal;
+							display: block;
+							margin-bottom: 10px;
+							cursor: pointer;
+							&:after{
+								content: "\e250";
+								font-family: "Glyphicons Halflings";
+								margin-left: 10px;
+							}
+						}
+						.area-shown{
+							&:after{
+								content: "\e252" !important;
+								font-family: "Glyphicons Halflings";
+								margin-left: 10px;
+							}
+						}
+					}
+					.form-item-field-sector{
+						border-bottom: 2px solid @color-white;
+					}
+					.form-type-checkboxes:last-child{
+						border-bottom: 2px solid @color-white;
+					}
+				}
+
+				#edit-content{
+					background-color: @color-primary;
+					padding-bottom: 50px;
+					padding-left: 30px;
+					padding-top: 30px;
+					border-left: 5px solid @color-white;
+					#edit-sort-fieldset{
+						border: none;
+						border-radius: 0px;
+						background-color: rgba(0,0,0,0);
+						box-shadow: none;
+						border-top: 2px solid @color-text-purple-darker;
+						border-bottom: 2px solid @color-text-purple-darker;
+						margin-bottom: 30px;
+						.panel-body{
+							padding-left: 0px;
+							padding-right: 0px;
+						}
+						.sort-container{
+							min-width: 210px;
+							padding-left: 0px;
+							label{
+								font-weight: 100;
+								font-size: @font-size0-9;
+								&:after{
+									content: ": ";
+								}
+							}
+							#edit-sort{
+								font-size: @font-size0-9;
+								display: inline-block;
+							    width: auto;
+							    padding: 0;
+							    border: none;
+							    padding-bottom: 1px;
+							    font-weight: bold;
+							    height: initial;
+							    background-color: rgba(0,0,0,0);
+							}
+						}
+						.count-container{
+							font-size: @font-size0-9;
+						}
+					}
+					.search-page-results-wrapper{
+						background-color: @color-white;
+						padding: 30px;
+						.view-mode-search_result{
+							border-top: 2px solid @color-primary-dark;
+							padding:30px 0px;
+							margin-right: 0px;
+							margin-left: 0px;
+							.col-sm-3{
+								padding-left: 0px;
+							}
+							.field-name-title-field{
+								font-size: @font-size1-4;
+								h3{
+									margin-top: 0px;
+								}
+							}
+							.field-name-field-publication-date{
+								margin-top: 0px;
+							}
+							.field-name-tools-see-more{
+								//margin-left: 207px;
+								a.more-link{
+									text-align: left;
+									margin-top: 15px;
+								}
+								a.show-less{
+									text-align: right !important;
+									width: 20px;
+    								height: 12px;
+								    float: right;
+								    overflow: hidden;
+								    font-style: normal;
+									&:before{
+										content: "\e253";
+										font-family: "Glyphicons Halflings";
+										font-size: 1.2em;
+    									line-height: 0;
+									}
+								}
+							}
+							.field-name-field-tool-link{
+								a{
+									color: @color-text-grey;
+								    font-weight: bold;
+								    margin-top: 30px;
+								    display: block;
+								    margin-bottom: 15px;
+									span.glyphicon-new-window{
+										color: @color-see-more;
+										margin-left: 10px;
+									}
+								}
+							}
+							
+							//partners inside oira tools
+							.field-name-related-partners{
+								.node-partner{
+									background-color: @color-primary-dark;
+    								padding: 15px;
+    								color: @color-white;
+    								margin-top: 20px;
+    								h4{
+    									a{
+    										font-size: 1.2em;
+    										color: @color-white;
+    										margin-top: 0px;
+    									}
+    								}
+    								.more-link{
+    									color: @color-white;
+    									text-align: left;
+    								}
+    							}
+							}
+							.related-partners-1 > div{
+								//margin-left: 222px;
+							}
+							.related-partners-2 > div{
+								display: table;
+								border-collapse: collapse;
+								& > .even, & > .odd{
+									&:first-child{
+										display: table-cell;
+									}
+								}
+								& > .even:first-child{
+									border-right: 10px solid white;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+/*END SEARCH*/
