--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -65,6 +65,7 @@
 	    			height: 29px;
 	    			width: 29px;
 	    			margin-right: 10px;
+	    			float: right;
 	    			background-color: rgba(255,255,255,0) !important;
 	    		}
 			}
